...
    <string name="filter_settings_icon">filter settings icon</string>
    <string name="preferences">Preferences</string>
    <string name="sending_preferences">Sending Preferences…</string>
    <string name="failed_send_pref">Failed to Send Preferences</string>
    <string name="invalid_data">Invalid data</string>
    <string name="couldnt_get_data">Couldn\'t get data</string>
    <string name="apply_text">APPLY</string>
    <string name="unaply_text">UNAPPLY</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="send_comment_icon">send_comment_icon</string>
    <string name="march_11">March 11</string>
    <string name="hello_how_are_you">Hello! How are you?</string>

    <string name="edit_button">Edit</string>
...
